lang/macro/tests/ui/fail/M-01-missing-message.rs
use ink_lang as ink;

#[ink::contract(version = "0.1.0")]
mod missing_message {
    #[ink(storage)]
    struct MissingMessage {}

    impl MissingMessage {
        #[ink(constructor)]
        fn constructor() -> Self {
            Self {}
        }
    }
}

fn main() {}
