lang/macro/tests/ui/fail/M-01-missing-message.stderr
error: ink! contracts require at least one `#[ink(message)]`
  --> $DIR/M-01-missing-message.rs:4:1
   |
4  | / mod missing_message {
5  | |     #[ink(storage)]
6  | |     struct MissingMessage {}
7  | |
...  |
13 | |     }
14 | | }
   | |_^
